testsuite/tests/typing-layouts-block-indices/parsing_idx_bad_ident.compilers.reference
File "parsing_idx_bad_ident.ml", line 8, characters 13-14:
8 | let _ = (.foo(0))
                 ^
<<<<<<< HEAD
Error: Syntax error: A parenthesis here can only follow one of: 
  ., .L, .l, .S, .s, .n, .:, .:L, .:l, .:S, .:s, .:n,
  .idx_imm, .idx_mut.
||||||| 9790921724
Error: Syntax error: A parenthesis here can only follow one of: 
  ".", ".L", ".l", ".S", ".s", ".n", ".:", ".:L", ".:l", ".:S", ".:s", ".:n",
  ".idx_imm", ".idx_mut".
=======
Error: Syntax error: A parenthesis here can only follow ".idx_imm" or ".idx_mut".
>>>>>>> 5.2.0minus-37
